--- a/wp-content/plugins/jayden-wordpress/assets/theme_styles.scss
+++ b/wp-content/plugins/jayden-wordpress/assets/theme_styles.scss
@@ -52,9 +52,11 @@ html {
       font-size: 25px;
     }
   }
-  .footer-widgets-outer-wrapper {
-    border-bottom: none;
-  }
+.footer-widgets-outer-wrapper {
+  border-bottom: none;
+  padding: 40px;
+}
+
 
   .widget.widget_media_image {
 
@@ -64,12 +66,40 @@ html {
     }
   }
 
+h3, .uk-h3 {
+  font-size: 24px;
+  line-height: 1.4;
+  margin: 20px auto !important;
+}
+h1.entry-title, h2.entry-title {
+  margin: 0;
+  font-size: 80px;
+  color: white;
+  letter-spacing: 2px;
+}
+
+.poster{
+  .entry-content
+  {
+    margin-top: 40px;
+  }
+}
+h2, .uk-h2 {
+  font-size: 44px!important;
+  line-height: 1.3;
+  margin: 40px auto!important;
+}
+.entry-content p, .entry-content li {
+  line-height: 1.476;
+  font-size: 18px;
+}
   .footer-widgets .widget {
     margin-top: 0;
   }
   #site-footer
   {
     background: #212020;
+    padding: 20px;
   }
   #site-footer .section-inner {
     display: flex;
@@ -331,12 +361,12 @@ html {
 
   .locate-houses
   {
-    background: white;
+    background: $primary_colour;
     padding-top: 40px;
     padding-left: 20px;
     padding-right: 20px;
     overflow: scroll;
-    max-height: 100vh;
+    max-height: 90vh;
 
     .uk-slidenav {
       display: none;
@@ -357,3 +387,11 @@ html {
       }
     }
   }
+
+
+.page-id-110
+{
+  .header-footer-group {
+    margin-top: 0!important;
+  }
+}
