--- a/wp-content/plugins/jayden-wordpress/assets/theme_styles.scss
+++ b/wp-content/plugins/jayden-wordpress/assets/theme_styles.scss
@@ -234,13 +234,17 @@ h2, .uk-h2 {
 
     .gal-image
     {
-      height: 230px;
+      min-height: 230px;
+      height: 100%;
       background-size: cover;
       background-position: 50% 50%;
       width: 100%;
       background-repeat: no-repeat;
     }
 
+    .desc{
+      height: 200px;
+    }
 
     .age{
       position: absolute;
@@ -394,4 +398,278 @@ h2, .uk-h2 {
   .header-footer-group {
     margin-top: 0!important;
   }
+}
+
+.archive-title
+{
+  color:white;
+}
+
+.page-template-template-locate {
+  .footer-nav-widgets-wrapper
+  {
+    display: none;
+  }
+}
+
+.gal-image-full{
+  min-height: 50%;
+  height: 100%;
+  background-size: contain;
+  background-position: 50% 50%;
+  width: 100%;
+  background-repeat: no-repeat;
+}
+
+.full-gal
+{
+  margin: -100px auto 0 !important;
+  [uk-slideshow-item]
+  {
+    top: 50%;
+    bottom: unset;
+  }
+  li{
+    margin:0;
+
+  }
+}
+.comment-reply-title {
+
+  margin: 100px auto!important;
+}
+
+
+.widget_text p, .widget_text ol, .widget_text ul, .widget_text dl, .widget_text dt, .widget-content .rssSummary {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+
+
+
+/*----------------------------------------------------------------------------*/
+/*---------------------------Small Desktop------------------------------------*/
+/*----------------------------------------------------------------------------*/
+@media only screen and (max-width: 1250px)
+{
+
+  .primary-menu li a {
+    font-size: 20px;
+    line-height: 2 !important;
+  }
+}
+
+
+
+
+/*----------------------------------------------------------------------------*/
+/*---------------------------Small Desktop------------------------------------*/
+/*----------------------------------------------------------------------------*/
+@media only screen and (max-width: 1200px)
+{
+
+
+}
+
+/*----------------------------------------------------------------------------*/
+/*------------------------------Laptop----------------------------------------*/
+/*----------------------------------------------------------------------------*/
+@media only screen and (max-width: 1000px)
+{
+  button.toggle.nav-toggle.mobile-nav-toggle, button.toggle.search-toggle.mobile-search-toggle {
+    background: $grey_colour;
+    z-index: 10000;
+    height: 80px;
+    width: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    top: 20px;
+    right: 10px;
+    .toggle-text
+    {
+      display: none;
+    }
+
+    &.button.toggle.search-toggle.mobile-search-toggle
+    {
+      left: 10px;
+      right: 0px;
+
+    }
+  }
+  .search-modal.active,.menu-modal.active {
+    z-index: 10000;
+  }
+  .site-logo
+  {
+    display: none;
+  }
+}
+
+
+/*----------------------------------------------------------------------------*/
+/*---------------------------Landscape Tablet---------------------------------*/
+/*----------------------------------------------------------------------------*/
+@media only screen and (max-width: 935px)
+{
+  .locate-houses {
+
+    overflow: visible;
+    max-height: unset;
+  }
+  h2#top {
+    margin: 20px 20px !important;
+  }
+}
+/*----------------------------------------------------------------------------*/
+/*---------------------------Landscape Tablet---------------------------------*/
+/*----------------------------------------------------------------------------*/
+@media only screen and (max-width: 900px)
+{
+  .widget_text p, .widget_text ol, .widget_text ul, .widget_text dl, .widget_text dt, .widget-content .rssSummary {
+    letter-spacing: normal;
+    font-size: 20px;
+  }
+
+
+}
+
+
+/*----------------------------------------------------------------------------*/
+/*---------------------------Portrait Tablet----------------------------------*/
+/*----------------------------------------------------------------------------*/
+@media only screen and (max-width: 760px)
+{
+
+
+.house{
+  .info
+  {
+    justify-content: center;
+    div{margin-right: 20px;}
+  }
+}
+}
+
+/*----------------------------------------------------------------------------*/
+/*---------------------------Mobile-------------------------------------------*/
+/*----------------------------------------------------------------------------*/
+@media only screen and (max-width: 639px)
+{
+  h2, .uk-h2 {
+    font-size: 34px !important;
+  }
+  .entry-content p, .entry-content li {
+    line-height: 1.476;
+    font-size: 14px;
+  }
+  .entry-header small {
+    font-size: 14px;
+    line-height: 1!important;
+  }
+  .full-gal {
+    margin: 20px auto 0!important;
+  }
+  h1.entry-title, h2.entry-title {
+    margin: 0;
+    font-size: 40px;
+  }
+  h2.has-text-align-center {
+    font-size: 30px!important;
+  }
+.to-the-top
+{
+  display: none;
+}
+  #site-footer .section-inner .footer-credits {
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+  }
+  #site-footer .section-inner .footer-credits .footer-copyright {
+    margin-right: 20px;
+    font-size: 14px;
+  }
+  #site-footer .section-inner {
+    margin: 0;
+    width: 100%;
+  }
+}
+/*----------------------------------------------------------------------------*/
+/*---------------------------Iphone Max---------------------------------------*/
+/*----------------------------------------------------------------------------*/
+@media only screen and (max-width: 450px)
+{
+  h1.entry-title, h2.entry-title {
+    margin: 40px 0;
+    font-size: 30px;
+  }
+  .house .info {
+    justify-content: center;
+    font-size: 20px;
+    max-width: 100%!important;
+  }
+  .footer-top-visible .footer-nav-widgets-wrapper, .footer-top-hidden #site-footer {
+    margin: 10px 0 0!important;
+    width: 100% !important;
+    .section-inner {
+      margin: 10px 0 0!important;
+      width: 100% !important;
+      .widget.widget_media_image img {
+        width: 180px;
+        margin: 0 auto;
+      }
+      .widget_archive li, .widget_categories li, .widget_pages li, .widget_meta li, .widget_nav_menu li {
+
+        text-align: center;
+        margin: 0;
+      }
+      .widget_nav_menu .widget-content > div > ul {
+        margin-left: 0;
+        padding: 0;
+      }
+      .footer-widgets-outer-wrapper
+      {
+        padding: 20px;
+        box-sizing: border-box;
+        padding: 20px;
+      }
+      .textwidget
+      {
+        p{
+          text-align: center;
+        }
+      }
+      .widget .widget-title {
+        margin: 0 0 2rem;
+        font-size: 35px !important;
+        text-align: center;
+      }
+    }
+  }
+}
+/*----------------------------------------------------------------------------*/
+/*---------------------------Small Mobile-------------------------------------*/
+/*----------------------------------------------------------------------------*/
+@media only screen and (max-width: 400px)
+{
+  header.archive-header.has-text-align-center.header-footer-group {
+    padding: 120px 0;
+  }
+
+}
+
+
+
+
+
+/*----------------------------------------------------------------------------*/
+/*---------------------------Iphone X-----------------------------------------*/
+/*----------------------------------------------------------------------------*/
+@media only screen and (max-width: 375px)
+{
+
+
 }
